fix: code elements should nowrap instead of word-break normal

--- a/src/styles/0-base/_typography.scss
+++ b/src/styles/0-base/_typography.scss
@@ -19,7 +19,13 @@ a {
   @apply no-underline;
 }
 
-p code,
-li code {
-  @apply p-1 rounded-md;
+p,
+li {
+  code {
+    @apply p-1 rounded-md;
+  }
+}
+
+code {
+  white-space: nowrap;
 }
